--- a/busqueda-por-nombre.html
+++ b/busqueda-por-nombre.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="bg-dark">
+  <body class="text-bg-dark">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">PokeApp</a>
@@ -31,11 +31,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Inicio</a>
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
                 href="http://localhost:5500/busqueda-por-nombre.html"
                 >Búsqueda por nombre</a
               >
@@ -45,38 +45,40 @@
       </div>
     </nav>
     <main>
-      <div class="d-flex justify-content-center pt-4 pb-2">
-        <button id="prevButton" class="btn btn-primary mx-3">anterior</button>
-        <button id="nextButton" class="btn btn-primary mx-3">siguiente</button>
-      </div>
-
-      <div id="pokemonListDiv"></div>
-
-      <!-- Vertically centered scrollable modal -->
-      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <!-- Modal -->
-        <div
-          class="modal fade"
-          id="abilitiesModal"
-          tabindex="-1"
-          aria-labelledby="exampleModalLabel"
-          aria-hidden="true"
-        >
-          <div class="modal-dialog">
-            <div id="modalDiv" class="modal-content"></div>
-          </div>
-        </div>
+      <div class="container-fluid">
+        <form id="searchForm" class="d-flex m-5" role="search">
+          <input
+            id="searchInput"
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
+        </form>
+        <div id="cardDiv" class="d-flex justify-content-center"></div>
       </div>
     </main>
-    <footer class="d-flex justify-content-center text-bg-dark">
-      <address>-BorbotonesJS 2023-</address>
-    </footer>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script> -->
+    <!-- Vertically centered scrollable modal -->
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="abilitiesModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div id="modalDiv" class="modal-content text-bg-light"></div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
       integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/main.js" type="module"></script>
+    <script src="./js/busqueda-por-nombre.js" type="module"></script>
   </body>
 </html>
