--- a/index.html
+++ b/index.html
@@ -52,21 +52,7 @@
 
       <div id="pokemonListDiv"></div>
 
-      <!-- Vertically centered scrollable modal -->
-      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <!-- Modal -->
-        <div
-          class="modal fade"
-          id="abilitiesModal"
-          tabindex="-1"
-          aria-labelledby="exampleModalLabel"
-          aria-hidden="true"
-        >
-          <div class="modal-dialog">
-            <div id="modalDiv" class="modal-content"></div>
-          </div>
-        </div>
-      </div>
+      <div id="modalDiv"></div>
     </main>
     <footer class="d-flex justify-content-center text-bg-dark">
       <address>-BorbotonesJS 2023-</address>
