--- a/busqueda-por-nombre.html
+++ b/busqueda-por-nombre.html
@@ -59,21 +59,7 @@
         <div id="cardDiv" class="d-flex justify-content-center"></div>
       </div>
     </main>
-    <!-- Vertically centered scrollable modal -->
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="abilitiesModal"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div id="modalDiv" class="modal-content text-bg-light"></div>
-        </div>
-      </div>
-    </div>
+    <div id="modalDiv" class="text-bg-light"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
       integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
