--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <div class="d-flex justify-content-center pt-4 pb-2">
         <button id="prevButton" class="btn btn-primary mx-3">anterior</button>
         <button id="nextButton" class="btn btn-primary mx-3">siguiente</button>
+        <button id="resetButton" class="btn btn-primary mx-3">resetear</button>
       </div>
 
       <div id="pokemonListDiv"></div>
@@ -63,6 +64,7 @@
       integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script src="./js/main.js" type="module"></script>
   </body>
 </html>
