--- a/juego.html
+++ b/juego.html
@@ -59,13 +59,11 @@
         <div id="cardDiv" class="d-flex justify-content-center"></div>
       </div>
     </main>
-    <div id="modalDiv" class="text-bg-light"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
       integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-    <script src="./js/busqueda-por-nombre.js" type="module"></script>
+    <script src="./js/juego.js" type="module"></script>
   </body>
 </html>
