Add navbar links

--- a/busqueda-por-nombre.html
+++ b/busqueda-por-nombre.html
@@ -34,11 +34,12 @@
               <a class="nav-link" aria-current="page" href="/">Inicio</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                href="http://localhost:5500/busqueda-por-nombre.html"
+              <a class="nav-link active" href="/busqueda-por-nombre.html"
                 >Búsqueda por nombre</a
               >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/juego.html">Jugar</a>
             </li>
           </ul>
         </div>
@@ -66,6 +67,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-    <script src="./js/busqueda-por-nombre.js" type="module"></script>
+    <script src="./js/searchByName.js" type="module"></script>
   </body>
 </html>
