--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Inicio</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="http://localhost:5500/busqueda-por-nombre.html"
+              <a class="nav-link" href="/busqueda-por-nombre.html"
                 >Búsqueda por nombre</a
               >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/juego.html">Jugar</a>
             </li>
           </ul>
         </div>
