--- a/juego.html
+++ b/juego.html
@@ -34,11 +34,12 @@
               <a class="nav-link" aria-current="page" href="/">Inicio</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                href="http://localhost:5500/busqueda-por-nombre.html"
+              <a class="nav-link" href="/busqueda-por-nombre.html"
                 >Búsqueda por nombre</a
               >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/juego.html">Jugar</a>
             </li>
           </ul>
         </div>
