--- a/busqueda-por-nombre.html
+++ b/busqueda-por-nombre.html
@@ -59,8 +59,12 @@
         </form>
         <div id="cardDiv" class="d-flex justify-content-center"></div>
       </div>
+      <div id="modalDiv" class="text-bg-light"></div>
+      <div class="safeArea"></div>
     </main>
-    <div id="modalDiv" class="text-bg-light"></div>
+    <footer class="d-flex justify-content-center">
+      <address>-BorbotonesJS 2023-</address>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
       integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
