--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="bg-dark">
+  <body class="text-bg-dark">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">PokeApp</a>
@@ -54,9 +54,10 @@
 
       <div id="pokemonListDiv"></div>
 
-      <div id="modalDiv"></div>
+      <div id="modalDiv" class="text-bg-light"></div>
+      <div class="safeArea"></div>
     </main>
-    <footer class="d-flex justify-content-center text-bg-dark">
+    <footer class="d-flex justify-content-center">
       <address>-BorbotonesJS 2023-</address>
     </footer>
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script> -->
