--- a/juego.html
+++ b/juego.html
@@ -45,61 +45,82 @@
         </div>
       </div>
     </nav>
-    <main>
-      <div class="container-fluid"></div>
-    </main>
-    <!-- Vertically centered modal -->
-    <div class="modal-dialog modal-dialog-centered">
-      <div
-        class="modal fade"
-        id="selectPokemonModal"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">
-                Selecciona tu pokemon
-              </h1>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <form id="searchForm" class="d-flex m-5" role="search">
-                <input
-                  id="searchInput"
-                  class="form-control me-2"
-                  type="search"
-                  placeholder="Search"
-                  aria-label="Search"
-                />
-                <button class="btn btn-outline-success" type="submit">
-                  Buscar
+
+    <main class="d-flex">
+      <div class="container-fluid">
+        <div class="d-flex justify-content-center px-2 py-5">
+          <button id="selectPokemon1Button" class="btn btn-primary">
+            Seleccionar Pokemon 1
+          </button>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="d-flex justify-content-center px-2 py-5">
+          <button id="selectPokemon2Button" class="btn btn-primary">
+            Seleccionar Pokemon 2
+          </button>
+        </div>
+      </div>
+
+      <!-- Vertically centered modal -->
+      <div class="modal-dialog modal-dialog-centered text-bg-light">
+        <div
+          class="modal fade"
+          id="selectPokemonModal"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">
+                  Selecciona tu pokemon
+                </h1>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <form id="searchForm" class="d-flex m-5" role="search">
+                  <input
+                    id="searchInput"
+                    class="form-control me-2"
+                    type="search"
+                    placeholder="Search"
+                    aria-label="Search"
+                  />
+                  <button class="btn btn-outline-success" type="submit">
+                    Buscar
+                  </button>
+                </form>
+                <div id="cardDiv" class="d-flex justify-content-center"></div>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancelar
                 </button>
-              </form>
-              <div id="cardDiv" class="d-flex justify-content-center"></div>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Cancelar
-              </button>
-              <button type="button" class="btn btn-primary">Seleccionar</button>
+                <button type="button" class="btn btn-primary">
+                  Seleccionar
+                </button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-
+      <div class="safeArea"></div>
+    </main>
+    <footer class="d-flex justify-content-center">
+      <address>-BorbotonesJS 2023-</address>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
       integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
