--- a/busqueda-por-nombre.html
+++ b/busqueda-por-nombre.html
@@ -47,7 +47,11 @@
     </nav>
     <main>
       <div class="container-fluid">
-        <form id="searchForm" class="d-flex m-5" role="search">
+        <form
+          id="searchForm"
+          class="d-flex m-5 justify-content-center"
+          role="search"
+        >
           <input
             id="searchInput"
             class="form-control me-2"
@@ -55,7 +59,7 @@
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
+          <button class="btn btn-primary" type="submit">Buscar</button>
         </form>
         <div id="cardDiv" class="d-flex justify-content-center"></div>
       </div>
