--- a/juego.html
+++ b/juego.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/game.css" />
   </head>
   <body class="text-bg-dark">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -46,20 +47,30 @@
       </div>
     </nav>
 
-    <main class="d-flex">
-      <div class="container-fluid">
-        <div class="d-flex justify-content-center px-2 py-5">
-          <button id="selectPokemon1Button" class="btn btn-primary">
-            Seleccionar Pokemon 1
-          </button>
+    <main>
+      <div class="players">
+        <div class="container-fluid playerContainer">
+          <div class="d-flex justify-content-center px-2 py-3">
+            <button id="selectPokemon1Button" class="btn btn-primary">
+              Seleccionar Pokemon 1
+            </button>
+          </div>
+          <div class="player"></div>
+          <div class="healthBarContainer">
+            <div id="healthBar1" class="healthBar" style="width: 100%"></div>
+          </div>
         </div>
-      </div>
 
-      <div class="container-fluid">
-        <div class="d-flex justify-content-center px-2 py-5">
-          <button id="selectPokemon2Button" class="btn btn-primary">
-            Seleccionar Pokemon 2
-          </button>
+        <div class="container-fluid playerContainer">
+          <div class="d-flex justify-content-center px-2 py-3">
+            <button id="selectPokemon2Button" class="btn btn-primary">
+              Seleccionar Pokemon 2
+            </button>
+          </div>
+          <div class="player"></div>
+          <div class="healthBarContainer">
+            <div id="healthBar2" class="healthBar" style="width: 100%"></div>
+          </div>
         </div>
       </div>
 
