Implement PlayerCharacter.hurt

--- a/juego.html
+++ b/juego.html
@@ -67,6 +67,11 @@
           <div id="playerDiv2" class="player"></div>
         </div>
       </div>
+      <div class="d-flex justify-content-center">
+        <button id="startButton" class="btn btn-warning startButton">
+          iniciar
+        </button>
+      </div>
 
       <!-- Vertically centered scrollable modal -->
       <div
