Improve readability. Fix selectListener

--- a/juego.html
+++ b/juego.html
@@ -104,7 +104,10 @@
                     Buscar
                   </button>
                 </form>
-                <div id="cardDiv" class="d-flex justify-content-center"></div>
+                <div
+                  id="modalCardDiv"
+                  class="d-flex justify-content-center"
+                ></div>
               </div>
               <div class="modal-footer">
                 <button
